# openspec-demo

./: .gitignore  README.md
notes-app/: .gitignore  README.md  pyproject.toml
notes-app/notes/: cli.py  core.py  storage.py
notes-app/openspec/: config.yaml
notes-app/openspec/changes/archive/2026-05-10-add-edit-and-stdin-body/: design.md  proposal.md
notes-app/openspec/changes/archive/2026-05-10-add-edit-and-stdin-body/specs/notes/: spec.md
notes-app/openspec/changes/archive/2026-05-10-add-list-and-limit-title/: design.md  proposal.md
notes-app/openspec/changes/archive/2026-05-10-add-list-and-limit-title/specs/note-listing/: spec.md
notes-app/openspec/changes/archive/2026-05-10-add-list-notes-spec/: tasks.md
notes-app/openspec/changes/archive/2026-05-10-add-note-creation/: tasks.md
notes-app/openspec/changes/archive/2026-05-10-consolidate-notes-spec/: design.md
notes-app/tests/: test_notes.py
openspec/changes/archive/2026-05-10-add-edit-and-stdin-body/: tasks.md
openspec/changes/archive/2026-05-10-add-list-and-limit-title/: tasks.md
openspec/changes/archive/2026-05-10-add-list-and-limit-title/specs/notes/: spec.md
openspec/changes/archive/2026-05-10-add-list-notes-spec/: design.md  proposal.md
openspec/changes/archive/2026-05-10-add-list-notes-spec/specs/note-listing/: spec.md
openspec/changes/archive/2026-05-10-add-note-creation/: design.md  proposal.md
openspec/changes/archive/2026-05-10-consolidate-notes-spec/: proposal.md  tasks.md
openspec/specs/notes/: spec.md
(+3 files in other folders)
