[project]
name = "notes-app"
version = "0.1.0"
description = "OpenSpec demo: a tiny notes CLI"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
